# Keven-Encryption-Benchmarking

./: README.md  encryption_benchmark.py  pyproject.toml  test_benchmark.py
dead_files/: decrypted_ecc_private_key.pem
encrypted_files_ecc/: ecc_private_key.pem
encrypted_files_rsa/: private_key.pem
tests/: test_encryption_benchmark.py
