[tool.poetry]
name = "encryption-benchmark"
version = "0.1.0"
description = "A tool for benchmarking encryption algorithms including AES, RSA, and ECC."
authors = ["Keven Duverglas <duverglas01@allegheny.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^44.0.0"
rich = "^13.9.4"
typer = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
encryption_benchmark = "encryption_benchmark:cli"
